--- a/visists.html
+++ b/visists.html
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-    <h3 class="text-center">Visitors</h3>
+    <h3 class="text-center">Visits</h3>
     <div class="container">
         <div class="col-xs-8 col-xs-offset-2">
             <input type="text" class="form-control" placeholder="Code" id="server" />
@@ -44,7 +44,7 @@
     </div>
 
     <script src="axios.js"></script>
-    <script src="script.js"></script>
+    <script src="visits.js"></script>
 
 </body>
 
