--- a/check-in-out/index.html
+++ b/check-in-out/index.html
@@ -49,9 +49,18 @@
     <div class="navs container">
         <div class="col-xs-11 col-xs-offset-1">
             <ul class="nav nav-pills">
-                <li data-key="0"><a>Visitor</a></li>
-                <li data-key="1"><a>Visits</a></li>
-                <li data-key="2"><a>Volunteers</a></li>
+                <li data-key="0">
+                    <a>Visitor</a>
+                </li>
+                <li data-key="1">
+                    <a>Visits</a>
+                </li>
+                <li data-key="2">
+                    <a>Volunteers</a>
+                </li>
+                <!-- <li data-key="3">
+                    <a>Workshops</a>
+                </li> -->
             </ul>
         </div>
     </div>
@@ -92,7 +101,17 @@
                 <div class="user-data-volunteer" id="data-volunteer"></div>
             </div>
         </div>
-
+        <div class="container main volunteers" data-key="3">
+            <h3 class="text-center">Workshops</h3>
+            <hr>
+            <div class="col-xs-8 col-xs-offset-2">
+                <input type="text" class="form-control" placeholder="Code" id="code-workshops" />
+                <button class="btn btn-success btn-center" id="btn-search-workshops">Search</button>
+                <hr>
+                <div id="messages-search-workshops"></div>
+                <div class="user-data-workshops" id="data-workshops"></div>
+            </div>
+        </div>
     </div>
     <script src="axios.js"></script>
     <script src="script.js"></script>
