Add Enter Click for forms

--- a/check-in-out/index.html
+++ b/check-in-out/index.html
@@ -64,8 +64,10 @@
             <h3 class="text-center">Visitors</h3>
             <hr>
             <div class="col-xs-8 col-xs-offset-2">
-                <input type="text" class="form-control" placeholder="Code" id="code-visitor" />
-                <button class="btn btn-success btn-center" id="btn-search-visitor">Search</button>
+                <form id="form-search-visitor">
+                    <input type="text" class="form-control" placeholder="Code" id="code-visitor" />
+                    <button class="btn btn-success btn-center" id="btn-search-visitor">Search</button>
+                </form>
                 <hr>
                 <div id="messages-search-visitor"></div>
                 <div class="user-data-visitor" id="data-visitor"></div>
@@ -76,8 +78,10 @@
             <h3 class="text-center">Visits</h3>
             <hr>
             <div class="col-xs-8 col-xs-offset-2">
-                <input type="text" class="form-control" placeholder="Code" id="code-visits" />
-                <button class="btn btn-success btn-center" id="btn-search-visits">Search</button>
+                <form id="form-search-visits">
+                    <input type="text" class="form-control" placeholder="Code" id="code-visits" />
+                    <button class="btn btn-success btn-center" id="btn-search-visits">Search</button>
+                </form>
                 <hr>
                 <div id="messages-search-visits"></div>
                 <div class="user-data-visits" id="data-visits"></div>
@@ -87,14 +91,16 @@
             <h3 class="text-center">Volunteers</h3>
             <hr>
             <div class="col-xs-8 col-xs-offset-2">
-                <input type="text" class="form-control" placeholder="Code" id="code-volunteer" />
-                <button class="btn btn-success btn-center" id="btn-search-volunteer">Search</button>
+                <form id="form-search-volunteer">
+                    <input type="text" class="form-control" placeholder="Code" id="code-volunteer" />
+                    <button class="btn btn-success btn-center" id="btn-search-volunteer">Search</button>
+                </form>
                 <hr>
                 <div id="messages-search-volunteer"></div>
                 <div class="user-data-volunteer" id="data-volunteer"></div>
             </div>
         </div>
-        <div class="container main volunteers" data-key="3">
+        <div class="container main workshops" data-key="3">
             <h3 class="text-center">Workshops</h3>
             <hr>
             <div class="col-xs-8 col-xs-offset-2">
